# mnist_classification

./: .gitignore  Dockerfile  README.md  README.md.save  build_image.sh  config.yaml  mnist_classification.code-workspace  pyproject.toml  requirements.txt  utils.py
.github/: copilot-instructions.md
data/metrics/: config.yaml  run1.json  run2_20251209-152333.json  run2_20251209-153258.json  run2_20251209-195324.json  run3_20251214-211716.json  run3_20251216-115828.json  run3_20251216-120949.json
models/: run3_20251214-211716_best.keras.temperature.json  run3_20251216-115828_best.keras.temperature.json  run3_20251216-120949_best.keras.temperature.json
scripts/: fit_temperature.py  smoke_gpu.py
src/: analyze_runs.py  api_fastapi.py  compare_runs.py  draw_client.py  main.py  predict.py  predict_blur.py  predict_confirm.py  predict_confirm_big.py  predict_zeros.py  requirements.txt  train.py  uncertainty.py  utils.py
